--- a/generators/app/features/postgresql/templates/.bin/pg_dump-postgres.hbs
+++ b/generators/app/features/postgresql/templates/.bin/pg_dump-postgres.hbs
@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_dump -h {{service.name}} -U postgres -O "$@"
+run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_dump --dbname=postgres://{{projectName}}:{{projectName}}@{{service.name}}/{{projectName}} "$@"
