--- a/generators/app/templates/.bash_enter.config.hbs
+++ b/generators/app/templates/.bash_enter.config.hbs
@@ -17,7 +17,7 @@ export DOCKER_DEVBOX_MO_DIRS="{{moDirectories}}"
 ###########################################
 
 # CA Certificates to copy inside containers. Should be provided as global environment variable.
-# export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem /etc/ssl/certs/*.local.pem"
+# export DOCKER_DEVBOX_CA_CERTIFICATES="/etc/ssl/certs/GFI*.pem" "/etc/ssl/certs/*.local.pem"
 
 # Docker registry to push images. Should be provided as global environment variable.
 # export DOCKER_DEVBOX_REGISTRY=docker-registry.etudes.local/
