--- a/generators/app/features/mysql/templates/.bin/mysql.hbs
+++ b/generators/app/features/mysql/templates/.bin/mysql.hbs
@@ -1,4 +1,5 @@
-#!/usr/bin/env bash
+#!/usr/bin/env sh
+. "$DOCKER_DEVBOX_DIR/.bash_enter.d/03-functions"
 
 #TODO: This won't work ... Check postgreSQL script for example
 dc exec --user root {{service.name}} mysql -u{{projectName}} -p "$@"
