--- a/generators/app/features/php-apache/templates/.bin/composer.hbs
+++ b/generators/app/features/php-apache/templates/.bin/composer.hbs
@@ -1,3 +1,4 @@
-#!/usr/bin/env bash
+#!/usr/bin/env sh
+. "$DOCKER_DEVBOX_DIR/.bash_enter.d/03-functions"
 
 run --user www-data --entrypoint composer --workdir="$(_docker_devbox_map_workdir "/var/www/html")" {{service.name}} "$@"
