Fix docker tests in TravisCI

--- a/generators/app/features/mailcatcher/templates/.docker/[service.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/mailcatcher/templates/.docker/[service.name]/Dockerfile.mo.hbs
@@ -3,8 +3,7 @@ FROM alpine:3.6
 
 \{{#DOCKER_DEVBOX_CA_CERTIFICATES}}
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
-RUN apk add --update ca-certificates
-RUN update-ca-certificates
+RUN apk add --update ca-certificates && update-ca-certificates
 \{{/DOCKER_DEVBOX_CA_CERTIFICATES}}
 
 RUN apk add --update \
