--- a/generators/app/features/sonar-scanner/templates/.docker/[service.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/sonar-scanner/templates/.docker/[service.name]/Dockerfile.mo.hbs
@@ -3,8 +3,7 @@ FROM newtmitch/sonar-scanner:3.2.0-alpine
 
 {{#DOCKER_DEVBOX_CA_CERTIFICATES}}
 COPY .ca-certificates/* /usr/local/share/ca-certificates/
-RUN apk add --update ca-certificates
-RUN update-ca-certificates
+RUN apk add --update ca-certificates && update-ca-certificates
 {{/DOCKER_DEVBOX_CA_CERTIFICATES}}
 
 ENTRYPOINT ["sonar-scanner", "-Dsonar.projectBaseDir=/root/src"]
