--- a/generators/app/features/node/templates/.bin/node.hbs
+++ b/generators/app/features/node/templates/.bin/node.hbs
@@ -1,4 +1,4 @@
 #!/usr/bin/env sh
-. "$DOCKER_DEVBOX_DIR/.bash_enter.d/03-functions"
+. "$DOCKER_DEVBOX_DIR/.bash.lib.d/docker"
 
-run --workdir="$(_docker_devbox_map_workdir "/app")" {{service.name}} node "$@"
+run --workdir="$(_docker_workdir "/app")" {{service.name}} node "$@"
