--- a/generators/app/features/php-apache/templates/.bin/composer.hbs
+++ b/generators/app/features/php-apache/templates/.bin/composer.hbs
@@ -1,4 +1,4 @@
 #!/usr/bin/env sh
-. "$DOCKER_DEVBOX_DIR/.bash_enter.d/03-functions"
+. "$DOCKER_DEVBOX_DIR/.bash.lib.d/docker"
 
-run --user www-data --entrypoint composer --workdir="$(_docker_devbox_map_workdir "/var/www/html")" {{service.name}} "$@"
+run --user www-data --entrypoint composer --workdir="$(_docker_workdir "/var/www/html")" {{service.name}} "$@"
