--- a/generators/app/features/postgresql/templates/.bin/pg_dump.hbs
+++ b/generators/app/features/postgresql/templates/.bin/pg_dump.hbs
@@ -1,4 +1,4 @@
 #!/usr/bin/env sh
-. "$DOCKER_DEVBOX_DIR/.bash_enter.d/03-functions"
+. "$DOCKER_DEVBOX_DIR/.bash.lib.d/docker"
 
-run --user postgres --workdir="$(_docker_devbox_map_workdir "/workdir")" db pg_dump --dbname=postgres://{{projectName}}:{{projectName}}@{{service.name}}/{{projectName}} "$@"
+run --user postgres --workdir="$(_docker_workdir "/workdir")" db pg_dump --dbname=postgres://{{projectName}}:{{projectName}}@{{service.name}}/{{projectName}} "$@"
