--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -3,19 +3,19 @@
 #########################################################
 
 # Current active environment
-export DOCKER_DEVBOX_ENV=dev
+autostash DOCKER_DEVBOX_ENV=dev
 
 # Domain name prefix to use for virtual host
-export DOCKER_DEVBOX_DOMAIN_PREFIX={{projectName}}
+autostash DOCKER_DEVBOX_DOMAIN_PREFIX={{projectName}}
 
 # Domain name to use for virtual host
-export DOCKER_DEVBOX_DOMAIN=test
+autostash DOCKER_DEVBOX_DOMAIN=test
 
 # Docker compose restart policy for services containers
-export DOCKER_DEVBOX_RESTART_POLICY="no"
+autostash DOCKER_DEVBOX_RESTART_POLICY="no"
 
 # Port prefix to use for docker mapping
-export DOCKER_DEVBOX_PORT_PREFIX={{portPrefix}}
+autostash DOCKER_DEVBOX_PORT_PREFIX={{portPrefix}}
 
 # Docker Compose project name. Will use the directory name if not defined.
-# export COMPOSE_PROJECT_NAME={{projectName}}
+# autostash COMPOSE_PROJECT_NAME={{projectName}}
