--- a/generators/app/features/node/templates/.bin/node.hbs
+++ b/generators/app/features/node/templates/.bin/node.hbs
@@ -1,4 +1,4 @@
 #!/usr/bin/env sh
-. "$DOCKER_DEVBOX_DIR/.bash.lib.d/docker"
+. "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
 
 run --workdir="$(_docker_workdir "/app")" {{service.name}} node "$@"
