--- a/generators/app/features/node/templates/.bin/yarn.hbs
+++ b/generators/app/features/node/templates/.bin/yarn.hbs
@@ -1,5 +1,5 @@
 #!/usr/bin/env sh
-. "$DOCKER_DEVBOX_DIR/.bash.lib.d/docker"
+. "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
 
 if [ "$1" -eq "serve" ] || { [ "$1" -eq "run" ] && [ "$2" == "serve" ]; }; then
   PORTS=" -p ${DOCKER_DEVBOX_PORT_PREFIX}88:80"
