Add better instance naming and port numbering

--- a/generators/app/features/node/templates/.bin/npm.hbs
+++ b/generators/app/features/node/templates/.bin/npm.hbs
@@ -8,4 +8,4 @@ else
   PORTS=""
 fi
 
-run$PORTS --workdir="$(_docker_workdir "/app")" {{service.name}} npm "$@"
+run$PORTS --workdir="$(_docker_workdir "/app")" {{instance.name}} npm "$@"
