--- a/generators/app/features/mariadb/templates/.bin/mysql.hbs
+++ b/generators/app/features/mariadb/templates/.bin/mysql.hbs
@@ -2,4 +2,4 @@
 . "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
 
 #TODO: This won't work ... Check postgreSQL script for example
-dc exec --user root {{service.name}} mysql -u{{projectName}} -p "$@"
+dc exec --user root {{instance.name}} mysql -u{{projectName}} -p "$@"
