--- a/generators/app/features/php-apache/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/php-apache/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -104,7 +104,7 @@ RUN apt-get update -y && apt-get install -y ssmtp && rm -rf /var/lib/apt/lists/*
 {{/hasFeature}}
 
 # TODO: Use volume
-COPY {{service.name}}/conf.d/* /usr/local/etc/php/conf.d/
+COPY {{instance.name}}/conf.d/* /usr/local/etc/php/conf.d/
 
 # Fix write permissions on Linux/Mac
 RUN usermod -u ${HOST_UID:-1000} www-data \
