Always use env bash and fix system bin

--- a/generators/app/features/node/templates/.bin/yarn.hbs
+++ b/generators/app/features/node/templates/.bin/yarn.hbs
@@ -1,4 +1,4 @@
-#!/usr/bin/env sh
+#!/usr/bin/env bash
 . "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
 
 if [ "$1" -eq "serve" ] || { [ "$1" -eq "run" ] && [ "$2" == "serve" ]; }; then
