--- a/generators/app/features/mariadb/templates/.bin/mysql.hbs
+++ b/generators/app/features/mariadb/templates/.bin/mysql.hbs
@@ -1,4 +1,4 @@
-#!/usr/bin/env sh
+#!/usr/bin/env bash
 . "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
 
 #TODO: This won't work ... Check postgreSQL script for example
