--- a/generators/app/features/php-apache/templates/.bin/composer.hbs
+++ b/generators/app/features/php-apache/templates/.bin/composer.hbs
@@ -1,4 +1,4 @@
-#!/usr/bin/env sh
+#!/usr/bin/env bash
 . "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
 
 run --user www-data --entrypoint composer --workdir="$(_docker_workdir "/var/www/html")" {{instance.name}} "$@"
