--- a/generators/app/features/phing/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/phing/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -10,8 +10,8 @@ ENV COMPOSER_HOME /composer
 ENV PATH /composer/vendor/bin:$PATH
 ENV COMPOSER_ALLOW_SUPERUSER 1
 
-RUN curl -sL -o /tmp/composer-setup.php https://getcomposer.org/installer \
-&& curl -sL -o /tmp/composer-setup.sig https://composer.github.io/installer.sig \
+RUN curl -fsSL -o /tmp/composer-setup.php https://getcomposer.org/installer \
+&& curl -fsSL -o /tmp/composer-setup.sig https://composer.github.io/installer.sig \
 && php -r "if (hash('SHA384', file_get_contents('/tmp/composer-setup.php')) !== trim(file_get_contents('/tmp/composer-setup.sig'))) { unlink('/tmp/composer-setup.php'); echo 'Invalid installer' . PHP_EOL; exit(1); }" \
 && php /tmp/composer-setup.php --no-ansi --install-dir=/usr/local/bin --filename=composer --snapshot && rm -rf /tmp/composer-setup.php \
 && apt-get update -y && apt-get install -y git zip unzip && rm -rf /var/lib/apt/lists/* \
@@ -29,11 +29,11 @@ RUN composer global require phing/phing pear/archive_tar --prefer-dist --no-prog
 # Docker CLI
 ARG DOCKER_VERSION=18.03.1-ce
 ARG DOCKER_COMPOSE_VERSION=1.21.2
-RUN curl -sL -O https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz \
-&& tar xzvf docker-${DOCKER_VERSION}.tgz \
+RUN curl -fsSL -o docker.tgz https://download.docker.com/linux/static/stable/x86_64/docker-${DOCKER_VERSION}.tgz \
+&& tar xzvf docker.tgz \
 && cp docker/* /usr/bin/ \
 && chmod +x /usr/bin/docker \
-&& curl -sL https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` -o /usr/bin/docker-compose \
+&& curl -fsSL https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` -o /usr/bin/docker-compose \
 && chmod +x /usr/bin/docker-compose
 
 RUN groupadd -g 998 docker
