Add support for PHP-FPM with nginx and features with multiple instances

--- a/generators/app/features/php-apache/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/php-apache/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -1,1 +1,10 @@
-{{> php/Dockerfile phpMode='apache'}}
+{{#> php/Dockerfile phpMode='apache'}}
+{{#inArray apacheExtensions "rewrite"}}
+
+RUN a2enmod rewrite
+{{/inArray}}
+{{#inArray apacheExtensions "proxy-http"}}
+
+RUN a2enmod proxy && a2enmod proxy_http
+{{/inArray}}
+{{/php/Dockerfile}}
