--- a/generators/app/features/php-fpm-nginx/templates/.docker/[instances.web.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/php-fpm-nginx/templates/.docker/[instances.web.name]/Dockerfile.mo.hbs
@@ -1,2 +1,2 @@
-FROM nginx
+FROM nginx:{{nginxVersion}}
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
