Use /var/www/html as project directory for each web containers

--- a/generators/app/features/php-fpm-apache/templates/.docker/[instances.web.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/php-fpm-apache/templates/.docker/[instances.web.name]/Dockerfile.mo.hbs
@@ -2,6 +2,7 @@ FROM httpd:{{apacheVersion}}
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
 
 RUN mkdir -p /usr/local/apache2/conf/custom \
+&& mkdir -p /var/www/html \
 && sed -i '/LoadModule proxy_module/s/^#//g' /usr/local/apache2/conf/httpd.conf \
 && sed -i '/LoadModule proxy_fcgi_module/s/^#//g' /usr/local/apache2/conf/httpd.conf \
 && echo >> /usr/local/apache2/conf/httpd.conf && echo 'Include conf/custom/*.conf' >> /usr/local/apache2/conf/httpd.conf
