--- a/generators/app/features/node/templates/.docker/[instance.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/node/templates/.docker/[instance.name]/Dockerfile.mo.hbs
@@ -28,6 +28,11 @@ RUN yarn config set cafile ${NODE_EXTRA_CA_CERTS} --global
 RUN npm config set prefix /home/node/.npm-packages
 ENV PATH="${PATH}:/home/node/.npm-packages/bin"
 
+{{#inArray nodeTools "node-sass"}}
+
+RUN npm install -g node-sass chokidar-cli compass-importer
+{{/inArray}}
+
 VOLUME /app
 VOLUME /home/node/.npm-packages
 VOLUME /home/node/.cache
