--- a/generators/app/features/node/templates/.bin/yarn.hbs
+++ b/generators/app/features/node/templates/.bin/yarn.hbs
@@ -1,11 +1,11 @@
 #!/usr/bin/env bash
 . "$DOCKER_DEVBOX_DIR/.bash.lib.d/50-docker"
 
-if [ "$1" -eq "serve" ] || { [ "$1" -eq "run" ] && [ "$2" == "serve" ]; }; then
+if [ "$1" == "serve" ] || { [ "$1" == "run" ] && [ "$2" == "serve" ]; }; then
   PORTS=" -p ${DOCKER_DEVBOX_PORT_PREFIX}88:80"
   echo "Port mapping:$PORTS"
 else
   PORTS=""
 fi
 
-run$PORTS --workdir="$(_docker_workdir "/app")" {{instance.name}} yarn "$@"
+run$PORTS --workdir="$(_docker_workdir "/app")" --entrypoint yarn {{instance.name}} "$@"
