--- a/generators/app/features/php-fpm-apache/templates/.docker/[instances.web.name]/Dockerfile.mo.hbs
+++ b/generators/app/features/php-fpm-apache/templates/.docker/[instances.web.name]/Dockerfile.mo.hbs
@@ -1,6 +1,12 @@
 FROM httpd:{{apacheVersion}}
 {{#if authorName}}LABEL maintainer="{{authorName}}{{#if authorEmail}} <{{authorEmail}}>{{/if}}"{{/if}}
 
+\{{#DOCKER_DEVBOX_CA_CERTIFICATES}}
+COPY .ca-certificates/* /usr/local/share/ca-certificates/
+RUN apt-get update && apt-get install -y ca-certificates && rm -rf /var/lib/apt/lists/* \
+&& update-ca-certificates
+\{{/DOCKER_DEVBOX_CA_CERTIFICATES}}
+
 RUN mkdir -p /usr/local/apache2/conf/custom \
 && mkdir -p /var/www/html \
 && sed -i '/LoadModule proxy_module/s/^#//g' /usr/local/apache2/conf/httpd.conf \
