--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -32,6 +32,14 @@ RUN yes | pecl install xdebug{{#semver phpVersion '<7'}}-2.5.5{{/semver}} \
 && echo "xdebug.remote_enable=on" >> /usr/local/etc/php/conf.d/xdebug.ini \
 && echo "xdebug.remote_autostart=off" >> /usr/local/etc/php/conf.d/xdebug.ini
 {{/inArray}}
+{{#inArray phpExtensions "redis"}}
+
+RUN docker-php-ext-enable redis
+{{/inArray}}
+{{#hasFeature 'redis'}}
+
+RUN pecl install redis
+{{/hasFeature}}
 {{#hasFeature 'postgresql'}}
 
 RUN apt-get update -y && apt-get install -y libpq-dev && rm -rf /var/lib/apt/lists/* && docker-php-ext-install pdo pdo_pgsql
