--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -14,6 +14,16 @@ RUN apt-get update -y && apt-get install -y libpng-dev libfreetype6-dev libjpeg6
 {{#inArray phpExtensions "opcache"}}
 
 RUN docker-php-ext-install opcache
+
+RUN echo "opcache.memory_consumption=128" >> /usr/local/etc/php/conf.d/opcache.ini \
+&& echo "opcache.interned_strings_buffer=16" >> /usr/local/etc/php/conf.d/opcache.ini \
+&& echo "opcache.max_accelerated_files=20000" >> /usr/local/etc/php/conf.d/opcache.ini \
+&& echo "opcache.validate_timestamps=1" >> /usr/local/etc/php/conf.d/opcache.ini \
+&& echo "opcache.revalidate_freq=0" >> /usr/local/etc/php/conf.d/opcache.ini \
+&& echo "opcache.fast_shutdown=1" >> /usr/local/etc/php/conf.d/opcache.ini \
+&& echo "opcache.revalidate_path=1" >> /usr/local/etc/php/conf.d/opcache.ini \
+&& echo "opcache.enable_cli=1" >> /usr/local/etc/php/conf.d/opcache.ini
+
 {{/inArray}}
 {{#inArray phpExtensions "ldap"}}
 
