--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -33,7 +33,8 @@ RUN apt-get update -y && apt-get install -y libldap2-dev && rm -rf /var/lib/apt/
 {{/inArray}}
 {{#inArray phpExtensions "zip"}}
 
-RUN docker-php-ext-install zip
+RUN apt-get update && apt-get install -y libzip-dev \
+&& docker-php-ext-install zip
 {{/inArray}}
 {{#inArray phpExtensions "xdebug"}}
 
