--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -36,7 +36,7 @@ RUN yes | pecl install xdebug{{#semver phpVersion '<7'}}-2.5.5{{/semver}} \
 
 RUN apt-get update -y && apt-get install -y libpq-dev && rm -rf /var/lib/apt/lists/* && docker-php-ext-install pdo pdo_pgsql
 {{/hasFeature}}
-{{#hasFeature 'mysql'}}
+{{#hasFeature 'mysql' 'mariadb'}}
 
 RUN docker-php-ext-install pdo pdo_mysql
 {{/hasFeature}}
@@ -78,7 +78,7 @@ RUN apt-get update -y && apt-get install -y gnupg && rm -rf /var/lib/apt/lists/*
 && echo "deb http://apt.postgresql.org/pub/repos/apt/ stretch-pgdg main" >> /etc/apt/sources.list.d/postgresql.list \
 && apt-get update -y && apt-get install -y postgresql-client-9.6 && rm -rf /var/lib/apt/lists/*
 {{/hasFeature}}
-{{#hasFeature 'mysql'}}
+{{#hasFeature 'mysql' 'mariadb'}}
 
 RUN apt-get update -y && apt-get install -y mysql-client && rm -rf /var/lib/apt/lists/*
 {{/hasFeature}}
