Add COMPOSE_NETWORK_NAME to php fpm instance

--- a/generators/app/features/php-fpm-apache/templates/.docker/[instances.web.name]/apache.conf.hbs
+++ b/generators/app/features/php-fpm-apache/templates/.docker/[instances.web.name]/apache.conf.hbs
@@ -15,6 +15,6 @@
     </Directory>
 
     <FilesMatch \.php$>
-        SetHandler "proxy:fcgi://{{instance.name}}:9000"
+        SetHandler "proxy:fcgi://{{instance.name}}.\{{COMPOSE_NETWORK_NAME}}:9000"
     </FilesMatch>
 </VirtualHost>
