--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -11,6 +11,9 @@ autostash DOCKER_DEVBOX_DOMAIN_PREFIX={{projectName}}
 # Domain name to use for virtual host
 autostash DOCKER_DEVBOX_DOMAIN=test
 
+# Enable SSL Certificate generation with cfssl-cli
+autostash DOCKER_DEVBOX_CFSSL_ENABLED=false
+
 # Docker compose restart policy for services containers
 autostash DOCKER_DEVBOX_RESTART_POLICY="no"
 
