Add .docker-compose.env file to .gitignore file

--- a/generators/app/templates/.gitignore.hbs
+++ b/generators/app/templates/.gitignore.hbs
@@ -12,7 +12,7 @@
 {{#if phingContainer ~}}
   /.phing/.environment
 {{/if}}
-/.env
+/.docker-compose.env
 /.docker/*/Dockerfile
 /.init/
 /.bash_enter.env
