--- a/generators/app/partials/php/Dockerfile.hbs
+++ b/generators/app/partials/php/Dockerfile.hbs
@@ -93,9 +93,8 @@ RUN apt-get update -y && apt-get install -y mysql-client && rm -rf /var/lib/apt/
 {{/hasFeature}}
 {{#hasFeature 'mariadb'}}
 
-RUN apt-get update -y && apt-get -y install software-properties-common gnupg lsb-release  \
-&& apt-key adv --recv-keys --keyserver hkp://keyserver.ubuntu.com:80 0xF1656F24C74CD1D8 \
-&& add-apt-repository "deb [arch=amd64] http://ftp.igh.cnrs.fr/pub/mariadb/repo/{{getFeatureOption 'mariadb' 'mariadbClientVersion'}}/debian $(lsb_release -cs) main" \
+RUN apt-get update -y && apt-get -y install software-properties-common gnupg && \
+curl -fsSL https://downloads.mariadb.com/MariaDB/mariadb_repo_setup | bash -s -- --mariadb-server-version="mariadb-{{getFeatureOption 'mariadb' 'mariadbClientVersion'}}" \
 && apt-get update -y && apt-get install -y mariadb-client && rm -rf /var/lib/apt/lists/*
 {{/hasFeature}}
 {{#inArray phpTools "wkhtmltopdf"}}
