Replace nginx-proxy references with reverse-proxy

--- a/generators/app/templates/.bash_enter.env.dist.hbs
+++ b/generators/app/templates/.bash_enter.env.dist.hbs
@@ -23,5 +23,5 @@ autostash DOCKER_DEVBOX_PORT_PREFIX={{portPrefix}}
 # Docker Compose project name. Will use the directory name if not defined.
 # autostash COMPOSE_PROJECT_NAME={{projectName}}
 
-# Name of the jwilder/nginx-proxy network
-autostash NGINX_PROXY_NETWORK="${NGINX_PROXY_NETWORK:-nginx-proxy}"
+# Name of the reverse-proxy network
+autostash REVERSE_PROXY_NETWORK="${REVERSE_PROXY_NETWORK:-reverse-proxy}"
